# SnakeGame-Progra3

./: CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
src/: Board.cpp  Board.h  Enums.h  Food.cpp  Food.h  Game.cpp  Game.h  Snake.cpp  Snake.h  main.cpp
